--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "WallyMapSpinzor2"]
 	path = WallyMapSpinzor2
-	url = https://github.com/eyalzus12/WallyMapSpinzor2
+	url = https://github.com/eyalzus12/WallyMapSpinzor2.git
+[submodule "SwiffCheese"]
+	path = SwiffCheese
+	url = https://github.com/eyalzus12/SwiffCheese.git
