--- a/WallyMapSpinzor2.Raylib/WallyMapSpinzor2.Raylib.csproj
+++ b/WallyMapSpinzor2.Raylib/WallyMapSpinzor2.Raylib.csproj
@@ -3,15 +3,15 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
-  <ItemGroup>
-  </ItemGroup>
+  
   <ItemGroup>
     <ProjectReference Include="..\WallyMapSpinzor2\WallyMapSpinzor2.csproj" />
+    <ProjectReference Include="..\SwiffCheese\SwiffCheese.csproj" />
   </ItemGroup>
+  
   <ItemGroup>
     <PackageReference Include="Raylib-cs" Version="6.0.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.1" />
