--- a/WallyMapSpinzor2.Raylib/WallyMapSpinzor2.Raylib.csproj
+++ b/WallyMapSpinzor2.Raylib/WallyMapSpinzor2.Raylib.csproj
@@ -14,6 +14,7 @@
   
   <ItemGroup>
     <PackageReference Include="Raylib-cs" Version="6.0.0" />
+    <PackageReference Include="rlImgui-cs" Version="2.0.2" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.1" />
   </ItemGroup>
 
