--- a/WallyMapSpinzor2.Raylib/WallyMapSpinzor2.Raylib.csproj
+++ b/WallyMapSpinzor2.Raylib/WallyMapSpinzor2.Raylib.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <PackageReference Include="NativeFileDialogSharp" Version="0.5.0" />
     <PackageReference Include="Raylib-cs" Version="6.0.0" />
     <PackageReference Include="rlImgui-cs" Version="2.0.2" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.3" />
