--- a/WallyMapSpinzor2.Raylib/WallyMapSpinzor2.Raylib.csproj
+++ b/WallyMapSpinzor2.Raylib/WallyMapSpinzor2.Raylib.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <InvariantGlobalization>true</InvariantGlobalization>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   
   <ItemGroup>
