--- a/WallyMapSpinzor2.Raylib/WallyMapSpinzor2.Raylib.csproj
+++ b/WallyMapSpinzor2.Raylib/WallyMapSpinzor2.Raylib.csproj
@@ -11,7 +11,8 @@
   <ItemGroup>
     <ProjectReference Include="..\WallyMapSpinzor2\WallyMapSpinzor2.csproj" />
     <ProjectReference Include="..\SwiffCheese\SwiffCheese.csproj" />
-    <ProjectReference Include="..\BrawlhallaSwz\BrawlhallaSwz/BrawlhallaSwz.csproj" />
+    <ProjectReference Include="..\BrawlhallaSwz\BrawlhallaSwz\BrawlhallaSwz.csproj" />
+    <ProjectReference Include="..\AbcDisassembler\AbcDisassembler\AbcDisassembler.csproj" />
   </ItemGroup>
   
   <ItemGroup>
