--- a/WallyMapSpinzor2.Raylib/WallyMapSpinzor2.Raylib.csproj
+++ b/WallyMapSpinzor2.Raylib/WallyMapSpinzor2.Raylib.csproj
@@ -35,6 +35,7 @@
     <PackageReference Include="Raylib-cs" Version="6.1.1" />
     <PackageReference Include="rlImgui-cs" Version="2.0.3" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
+    <PackageReference Include="Sep" Version="0.5.2" />
   </ItemGroup>
 
 </Project>
