use a default .ini if imgui.ini doesn't exist
closes #50

--- a/WallyMapEditor/WallyMapEditor.csproj
+++ b/WallyMapEditor/WallyMapEditor.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <EmbeddedResource Include=".\res\fonts\Roboto-Regular.ttf" />
+    <EmbeddedResource Include=".\res\imgui\defaultimgui.ini" />
   </ItemGroup>
   
   <ItemGroup>
