--- a/WallyMapEditor/WallyMapEditor.csproj
+++ b/WallyMapEditor/WallyMapEditor.csproj
@@ -7,11 +7,11 @@
     <WarningsAsErrors>Nullable</WarningsAsErrors>
     <InvariantGlobalization>true</InvariantGlobalization>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <PublishSingleFile>true</PublishSingleFile>
+    <PublishSelfContained>true</PublishSelfContained>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PublishSingleFile>true</PublishSingleFile>
-    <SelfContained>true</SelfContained>
     <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
 
     <DebugSymbols>false</DebugSymbols>
