--- a/WallyMapEditor/WallyMapEditor.csproj
+++ b/WallyMapEditor/WallyMapEditor.csproj
@@ -39,8 +39,8 @@
     <PackageReference Include="NativeFileDialogSharp" Version="0.5.0" />
     <PackageReference Include="Raylib-cs" Version="6.1.1" />
     <PackageReference Include="rlImgui-cs" Version="2.1.0" />
-    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
     <PackageReference Include="Sep" Version="0.5.2" />
+    <PackageReference Include="Svg.Skia" Version="2.0.0.4" />
   </ItemGroup>
 
 </Project>
